# comfyui_image_metadata_extension

./: .gitignore  pyproject.toml
modules/: __init__.py  capture.py  hook.py  trace.py
modules/defs/: validators.py
modules/nodes/: node.py
