[project]
name = "comfyui_image_metadata_extension"
description = "Custom node for ComfyUI. It adds additional metadata for saved images, ensuring compatibility with the Civitai website."
version = "1.3.5"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/edelvarden/comfyui_image_metadata_extension"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "xmarre"
DisplayName = "comfyui_image_metadata_extension"
Icon = ""
